--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 
+# Mysql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/case_db?serverTimezone=UTC&useSSL=false
+spring.datasource.username=case
+spring.datasource.password=case1004
+
+# MyBatis
+# mapper.xml location
+mybatis.mapper-locations: mapper/**/*.xml
+
+# model property camel case
+mybatis.configuration.map-underscore-to-camel-case=true
+
+# 패키지명 생략 alias
+mybatis.type-aliases-package=io.rooftophero.mybatiscase.domain
+
+# mapper log level
+logging.level.rooftophero.io.mybatisexample.mapper=TRACE
+
+# schema.sql, data.sql 적용 {always/never}
+spring.datasource.initialization-mode=always
