--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,11 +12,12 @@ mybatis.mapper-locations: mapper/**/*.xml
 # model property camel case
 mybatis.configuration.map-underscore-to-camel-case=true
 
-# ???? ?? alias
+# 패키지명 생략 alias
 mybatis.type-aliases-package=io.rooftophero.mybatiscase.domain
 
 # mapper log level
 logging.level.rooftophero.io.mybatisexample.mapper=TRACE
 
-# schema.sql, data.sql ?? {always/never}
-# spring.datasource.initialization-mode=never
+# schema.sql, data.sql 적용 {always/never}
+spring.datasource.initialization-mode=always
+
