[ENH] Board-Thymeleaf

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,6 @@ mybatis.type-aliases-package=io.rooftophero.mybatiscase.domain
 logging.level.rooftophero.io.mybatisexample.mapper=TRACE
 
 # schema.sql, data.sql 적용 {always/never}
-spring.datasource.initialization-mode=always
+# spring.datasource.initialization-mode=never
 
+#server.error.whitelabel.enabled=false
